CostalCloud/force-app/main/default/objects/Attachment_Files__c.object
<CustomObject>
    <description>Custom Object to allow files to be uploaded with custom fields for Type etc.</description>
    <label>Attachment/Files</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Attachment/Files Auto #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachment/Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>