CostalCloud/force-app/main/default/objects/Attachment_Files__c/fields/Attachment_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Attachment_File_Number__c</fullName>
    <formula>IF(ISPICKVAL(Type__c , &quot;Pre-Ren&quot;) , &quot;801&quot;,
IF(ISPICKVAL(Type__c , &quot;Checklist&quot;) , &quot;804&quot;,
IF(ISPICKVAL(Type__c , &apos;LTE&apos;) , &quot;807&quot;,
IF(ISPICKVAL(Type__c , &apos;LTR&apos;) , &quot;808&quot;,
IF(ISPICKVAL(Type__c , &apos;ICA&apos;) , &quot;650&quot;,
IF(ISPICKVAL(Type__c , &apos;Measure&apos;) , &quot;100&quot;,
IF(ISPICKVAL(Type__c , &apos;LTE Proof&apos;) , &quot;814&quot;,
IF(ISPICKVAL(Type__c , &apos;State RRP Form - Rhode Island&apos;) , &quot;915&quot;,
IF(ISPICKVAL(Type__c , &apos;State RRP Form - Alabama&apos;) , &quot;915&quot;,
IF(ISPICKVAL(Type__c , &apos;State RRP Form - Wash DC&apos;) , &quot;915&quot;,
IF(ISPICKVAL(Type__c , &apos;State RRP Form - Mississippi&apos;) , &quot;915&quot;,
IF(ISPICKVAL(Type__c , &apos;Change Order&apos;) , &quot;750&quot;,
IF(ISPICKVAL(Type__c , &apos;Permit&apos;) , &quot;753&quot;,
IF(ISPICKVAL(Type__c , &apos;Permit Waiver&apos;) , &quot;753&quot;,
IF(ISPICKVAL(Type__c , &apos;Wind Storm&apos;) , &quot;753&quot;,

&apos;&apos;)))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment/File Number</label>
    <type>Text</type>
</CustomField>