CostalCloud/force-app/main/default/objects/Attachment_Files__c/fields/BDC_Response_Message__c.field-meta.xml
<CustomField>
    <fullName>BDC_Response_Message__c</fullName>
    <description>Store the Response when a File has been uploaded to the BDC system</description>
    <label>BDC - Response Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>