CostalCloud/force-app/main/default/objects/Attachment_Files__c/fields/Date_Time_sent_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_sent_to_Client__c</fullName>
    <inlineHelpText>Updated by integration when sent</inlineHelpText>
    <label>Date/Time sent to Client</label>
    <type>DateTime</type>
</CustomField>