CostalCloud/force-app/main/default/objects/Attachment_Files__c/fields/Has_File__c.field-meta.xml
<CustomField>
    <fullName>Has_File__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Trigger populates this field when file is uploaded to the record.</inlineHelpText>
    <label>Has File</label>
    <type>Checkbox</type>
</CustomField>