CostalCloud/force-app/main/default/objects/Attachment_Files__c/fields/In_Review_By__c.field-meta.xml
<CustomField>
    <fullName>In_Review_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>In Review By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attachment_Files</relationshipName>
    <type>Lookup</type>
</CustomField>