CostalCloud/force-app/main/default/objects/Attachment_Files__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Approval_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Approval Required</fullName>
            </value>
            <value>
                <fullName>Blank Form</fullName>
            </value>
            <value>
                <fullName>Incomplete RRP Document</fullName>
            </value>
            <value>
                <fullName>Missing/Illegible Customer Signature/Date</fullName>
            </value>
            <value>
                <fullName>Missing/Incorrect Cover Page Data</fullName>
            </value>
            <value>
                <fullName>Missing/Invalid explanation for pamphlet delivery</fullName>
            </value>
            <value>
                <fullName>Missing/Invalid RRP Photos</fullName>
            </value>
            <value>
                <fullName>Missing/Invalid RRP Proof</fullName>
            </value>
            <value>
                <fullName>Missing Appliance Specs</fullName>
            </value>
            <value>
                <fullName>Missing Elevations</fullName>
            </value>
            <value>
                <fullName>Missing Floor Plan Overview</fullName>
            </value>
            <value>
                <fullName>Missing Hardware/Door Type Information</fullName>
            </value>
            <value>
                <fullName>Missing Item List</fullName>
            </value>
            <value>
                <fullName>Missing Molding Details</fullName>
            </value>
            <value>
                <fullName>Missing Sold Labor Details</fullName>
            </value>
            <value>
                <fullName>Missing Year-Built Date</fullName>
            </value>
            <value>
                <fullName>Pending Completion of Child Work Order</fullName>
            </value>
            <value>
                <fullName>Pending Reduced/Change PO</fullName>
            </value>
            <value>
                <fullName>PO Not Scheduled</fullName>
            </value>
            <value>
                <fullName>RM Approval Required</fullName>
            </value>
            <value>
                <fullName>Year Home Built Discrepancies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>