CostalCloud/force-app/main/default/objects/Attachment_Files__c/fields/Send_to_THD__c.field-meta.xml
<CustomField>
    <fullName>Send_to_THD__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox auto updated by flow when WO is ready to send</inlineHelpText>
    <label>Send to THD</label>
    <type>Checkbox</type>
</CustomField>