CostalCloud/force-app/main/default/objects/Attachment_Files__c/fields/THD_Send_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>THD_Send_Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>THD - Send Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>