CostalCloud/force-app/main/default/objects/Attachment_Files__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Changed PO</fullName>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>MP/CB Approval</fullName>
            </value>
            <value>
                <fullName>MP/CB Request</fullName>
            </value>
            <value>
                <fullName>Checklist</fullName>
            </value>
            <value>
                <fullName>DDR</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>I2G</fullName>
            </value>
            <value>
                <fullName>ICA</fullName>
            </value>
            <value>
                <fullName>KPW (Labor Bid)</fullName>
            </value>
            <value>
                <fullName>LTE</fullName>
            </value>
            <value>
                <fullName>LTE Proof</fullName>
            </value>
            <value>
                <fullName>LTR</fullName>
            </value>
            <value>
                <fullName>Measure</fullName>
            </value>
            <value>
                <fullName>Permit</fullName>
            </value>
            <value>
                <fullName>Permit Waiver</fullName>
            </value>
            <value>
                <fullName>Pre-Ren</fullName>
            </value>
            <value>
                <fullName>Reduced PO</fullName>
            </value>
            <value>
                <fullName>Service Report</fullName>
            </value>
            <value>
                <fullName>State RRP Form - Alabama</fullName>
            </value>
            <value>
                <fullName>State RRP Form - Mississippi</fullName>
            </value>
            <value>
                <fullName>State RRP Form - Rhode Island</fullName>
            </value>
            <value>
                <fullName>State RRP Form - Wash DC</fullName>
            </value>
            <value>
                <fullName>Wind Storm</fullName>
            </value>
            <value>
                <fullName>Photo</fullName>
            </value>
            <value>
                <fullName>State RRP Form - MS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>