CostalCloud/force-app/main/default/objects/Attachment_Files__c/fields/WO_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>WO_Order_Number__c</fullName>
    <formula>Work_Order__r.Order_Number__c</formula>
    <label>WO - Order Number</label>
    <type>Text</type>
</CustomField>