CostalCloud/force-app/main/default/objects/Attachment_Files__c/fields/WO_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>WO_PO_Number__c</fullName>
    <formula>Work_Order__r.PO_Number__c</formula>
    <label>WO - PO Number</label>
    <type>Text</type>
</CustomField>