CostalCloud/force-app/main/default/objects/Attachment_Files__c/fields/WO_Store_No__c.field-meta.xml
<CustomField>
    <fullName>WO_Store_No__c</fullName>
    <formula>Work_Order__r.Store_No__c</formula>
    <label>WO - Store No</label>
    <type>Text</type>
</CustomField>