CostalCloud/force-app/main/default/objects/Attachment_Files__c/fields/WO_svcLineNumber__c.field-meta.xml
<CustomField>
    <fullName>WO_svcLineNumber__c</fullName>
    <formula>Work_Order__r.svcLineNumber__c</formula>
    <label>WO - svcLineNumber</label>
    <type>Text</type>
</CustomField>