CostalCloud/force-app/main/default/objects/Attachment_Files__c/validationRules/Populate_the_Reviewed_by_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Populate_the_Reviewed_by_Field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Approval_Status__c , &quot;In Review&quot;) ,
 ISNULL( In_Review_By__c ))</errorConditionFormula>
    <errorDisplayField>In_Review_By__c</errorDisplayField>
    <errorMessage>Please select user name that is currently reviewing this file</errorMessage>
</ValidationRule>