CostalCloud/force-app/main/default/objects/Attachment_Files__c/listViews/Queue_Attachment_Files_Pending_Review.listView-meta.xml
<ListView>
    <fullName>Queue_Attachment_Files_Pending_Review</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>Type__c</columns>
    <columns>WO_Order_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Queue: Attachment Files Pending Review</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>